[CRD iOS] Fix broken viewport state when showing the soft keyboard that overlays the cursor

Previously if the cursor is overlaid by the keyboard when the keyboard
is being shown, the viewport will not focus on the cursor when the
animation is done, and moving cursor after that will cause the viewport
to jump and match the cursor position.

This CL fixes this by resetting the viewport center every time the
surface size is changed and adding animation to mitigate the abruptness
of surface size change.

Bug: 757101
Change-Id: I6d1dcf0b7e34ba08ee24ce92ad7cab993587210b