remoting/client/input/direct_touch_input_strategy.h
@@ -32,6 +32,8 @@ class DirectTouchInputStrategy : public TouchInputStrategy {
 
   ViewMatrix::Point GetCursorPosition() const override;
 
+  void FocusViewportOnCursor(DesktopViewport* viewport) const override;
+
   ViewMatrix::Vector2D MapScreenVectorToDesktop(
       const ViewMatrix::Vector2D& delta,
       const DesktopViewport& viewport) const override;
