remoting/client/input/trackpad_input_strategy.h
@@ -30,6 +30,8 @@ class TrackpadInputStrategy : public TouchInputStrategy {
 
   ViewMatrix::Point GetCursorPosition() const override;
 
+  void FocusViewportOnCursor(DesktopViewport* viewport) const override;
+
   ViewMatrix::Vector2D MapScreenVectorToDesktop(
       const ViewMatrix::Vector2D& delta,
       const DesktopViewport& viewport) const override;
